--- a/docs/components/doc-sections/en/bindings.html
+++ b/docs/components/doc-sections/en/bindings.html
@@ -1,11 +1,13 @@
 <section class="section">
+    <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/bindings.html" 
+        title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
+
     <h1> <a id="bindings" href="#bindings"> Bindings </a> </h1>
 
     <h3> <a id="bind_one_way" href="#bind_one_way"> One Way </a> </h3>
     <p>
-        You can achieve One Way Data Binding simply by defining the delimiter in the space or
-        attribute you need
-        the value to be.
+        We can achieve One Way Data Binding simply by defining the delimiter in the space or
+        attribute we need the value to be.
     </p>
 
     <div e-if="typeof noApp === 'undefined'">
@@ -37,7 +39,7 @@
 
 
     <p e-ignore>
-        If you don't want to do it this way, you can still use the command
+        If we don't want to do it this way, we can still use the command
         <span class="note mark-el">e-<i>property</i>="{{ dataProperty }}"</span>,
         it creates the property after being compiled. This commands is very versatile,
         we will go into details about it in the <a href="docs.page.2.html#cmd_e" class="note mark-el">commands</a> section.
@@ -52,11 +54,11 @@
 
     <h3> <a id="bind_two_way" href="#bind_two_way"> Two Way </a> </h3>
     <p>
-        You can achieve Two Way Data Binding using the command <span
+        We can achieve Two Way Data Binding using the command <span
             class="note mark-el">e-bind:<i>property</i>="dataProperty"</span>,
-        by default it binds <span class="note">value</span> property, it means that if you want
-        to bind the property value of
-        an input you can define like this <span class="note mark-el">e-bind="dataProperty"</span>.
+        by default it binds <span class="note">value</span> property, it means that if we want
+        to bind the property value of an input we can define like this 
+        <span class="note mark-el">e-bind="dataProperty"</span>.
     </p>
 
     <div e-if="typeof noApp === 'undefined'">
