--- a/docs/components/doc-sections/en/commands.html
+++ b/docs/components/doc-sections/en/commands.html
@@ -1,4 +1,7 @@
 <section class="section">
+    <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/commands.html" 
+    title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
+
     <h1> <a id="commands" href="#commands"> Commands </a> </h1>
     <p>
         Easy has some commands that are used as attributes in elements, each one has its
@@ -19,10 +22,9 @@
     </p>
 
     <p>
-        If you define an <a href="https://www.dyn-web.com/tutorials/object-literal/" class="mark-el">Object Literal</a>,
+        If we define an <a href="https://www.dyn-web.com/tutorials/object-literal/" class="mark-el">Object Literal</a>,
         kwow that these properties are temporary and by default <span class="note warn-border">they are not
-            reactive</span>,
-        unless an object that is already reactive is passedby itself or if you pass the object in the
+            reactive</span>, unless an object that is already reactive is passedby itself or if we passe the object in the
         <span class="note">this.reactive( ... )</span> method, it expects a method and returns the already reactive
         object.
     </p>
@@ -215,8 +217,7 @@
     <div class="block-note info">
         <p>
             Please don't judge us by this example, it may not even make much sense, but it's
-            just to show you how
-            it works 😀.
+            just to show you how it works 😀.
         </p>
     </div>
 
@@ -632,17 +633,15 @@
 
     <div class="block-note info">
         <p>
-            If you use some method that changes the array even if it is not in the list above
-            the user interface will be updated
-            too.
+            If we use some method that changes the array even if it is not in the list above
+            the user interface will be updated too.
         </p>
     </div>
 
     <div class="block-note dont">
         <p>
-            Easy cannot detect changes when you modify the length of the array. e.g.: <span class="note att-border">
-                array.length = newLength </span>.
-            If will not have effects in to the user interface.
+            Easy cannot detect changes when we modify the length of the array. e.g.: <span class="note att-border">
+                array.length = newLength </span>. If will not have effects in to the user interface.
         </p>
     </div>
 
@@ -677,13 +676,13 @@
     </p>
 
     <ul>
-        <li> <span class="note mark-el">up</span> &ndash; Performs the animation starting from
+        <li> <span class="note mark-el">up</span> &ndash; performs the animation starting from
             the bottom to the top, ascending and gradually increasing the opacity. </li>
-        <li> <span class="note mark-el">down</span> &ndash; Performs the animation starting
+        <li> <span class="note mark-el">down</span> &ndash; performs the animation starting
             from the top to the bottom, descending and gradually increasing the opacity.</li>
-        <li> <span class="note mark-el">left</span> &ndash; Performs the animation starting
+        <li> <span class="note mark-el">left</span> &ndash; performs the animation starting
             from the right to the left, scrolling and gradually increasing the opacity. </li>
-        <li> <span class="note mark-el">right</span> &ndash; Performs the animation starting
+        <li> <span class="note mark-el">right</span> &ndash; performs the animation starting
             from the left to the right, scrolling and gradually increasing the opacity. </li>
     </ul>
 
