--- a/docs/components/doc-sections/en/delimiters.html
+++ b/docs/components/doc-sections/en/delimiters.html
@@ -1,4 +1,7 @@
 <section class="section">
+    <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/delimiters.html" 
+    title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
+
     <h1> <a id="delimiters" href="#delimiters"> Delimiters </a> </h1>
 
     <p>
@@ -9,10 +12,9 @@
     </p>
 
     <p>
-        The delimiters open a space in HTML to execute some javascript code, it means that you
+        The delimiters open a space in HTML to execute some javascript code, it means that we
         can execute any pure js code variables, function, ternary operatiors, etc. I only need
-        to
-        return a value.
+        to return a value.
     </p>
 
     <p>
