--- a/docs/components/doc-sections/en/introduction.html
+++ b/docs/components/doc-sections/en/introduction.html
@@ -1,4 +1,7 @@
 <section class="section">
+    <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/introduction.html" 
+        title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
+
     <h1> <a id="intro" href="#intro"> Introduction </a> </h1>
 
     <h3> <a id="what" href="#what"> What is Easy.js? </a> </h3>
