--- a/docs/components/doc-sections/en/methods.html
+++ b/docs/components/doc-sections/en/methods.html
@@ -1,4 +1,7 @@
 <section class="section">
+    <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/methods.html" 
+    title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
+
     <h1><a id="methods" href="#methods"> Methods </a></h1>
     <p>
         There are some built-in methods that can be used in the application, which are:
