--- a/docs/components/doc-sections/en/routing.html
+++ b/docs/components/doc-sections/en/routing.html
@@ -1,4 +1,7 @@
 <section class="section">
+    <a href="https://github.com/AfonsoMatElias/easy/blob/6a729b7284758c6064eaadb4dc6b23fde4081aaf/docs/components/doc-sections/en/routing.html" 
+    title="Help us improve this documentation on github!" class="edit-content"><span class="fa fa-pencil"></span></a>
+
     <h1> <a id="routing" href="#routing"> Routing </a> </h1>
     <p>
         The routing funcionality that enable the <b>Single Page Application</b> mode, and creating a SPA with
@@ -43,7 +46,7 @@
             based on hash. The default value is <span class="note mark-el">true</span>.
         </li>
         <li>
-            Ate this point we are going to assume that you already know what component nameId means.
+            At this point we are going to assume that you already know what's component nameId is.
         </li>
         <li> <span class="note mark-el">nameId.title</span> &ndash; represents the title that will be
             setted to the page after the component has been added to the DOM (It is optional).</li>
