--- a/docs/components/tutorial/en/commands.html
+++ b/docs/components/tutorial/en/commands.html
@@ -2,7 +2,7 @@
 <inc src="page">
     <content>
         <!-- Including the section -->
-        <inc src="instance" data="{ noApp: true }"></inc>
+        <inc src="commands" data="{ noApp: true }"></inc>
     </content>
 </inc>
 <script>
