--- a/docs/components/doc-sections/en/side-menu.html
+++ b/docs/components/doc-sections/en/side-menu.html
@@ -133,6 +133,7 @@
                     <li> <a href="#comp_exporting"> Exporting </a> </li>
                     <li> <a href="#comp_data"> Inc with data </a> </li>
                     <li> <a href="#comp_delimiter"> Inc with Delimiter </a> </li>
+                    <li> <a href="#comp_on"> Inc with `on` Method </a> </li>
                     <li> <a href="#comp_keep_alive"> Keep Alive </a> </li>
                     <li> <a href="#comp_nesting_content"> Nesting Content </a> </li>
                     <li> <a href="#comp_nesting_includers"> Nesting Includers </a> </li>
@@ -167,69 +168,7 @@
         }
     }
     this.loaded = function(el) {
-        // Store all the menu anchros do be able to find it by key
-        var menu = {},
-            // Store the last passed anchor on scroll
-            lastPassed,
-            // Store the last active anchor in menu bar
-            $lastActive,
-            // Menu container
-            $MenuContainer = document.node('.doc-menu .content'),
-            // Getting all the anchors in the menu bar anchors
-            $$anchors = $MenuContainer.nodes('.menu a[href]');
-
-        // Mapping the anchors to the menu variable
-        for (var i = 0; i < $$anchors.length; i++) {
-            var $e = $$anchors[i];
-            menu[$e.hash] = $e;
-        }
-
-        // Listening to the scroll event 
-        document.node('.doc-presentation').onscroll = function () {
-            var current;
-            // Looping all the subscribed anchors
-            for (var i = 0; i < $anchors.length; i++) {
-                var element = $anchors[i];
-
-                // If has class attribute, means that is markable element
-                if (element.attributes['class']) continue;
-
-                // Getting the floor of the value
-                var position = Math.floor(element.getBoundingClientRect().top);
-
-                // Checking if it is in the range 
-                // (Used this way because with only one value like 60, some of them will not this verification)
-                if (position <= 70 && position >= 60) {
-                    current = element;
-                    break;
-                }
-            }
-
-            if (current) {
-                // Void if the current and the last are the same 
-                if (lastPassed && (lastPassed.id === current.id)) return;
-
-                // Getting the menu anchor that corresponds this id
-                var $current = menu['#' + current.id];
-
-                // Void if it wasn't found
-                if (!$current) return;
-
-                // Clearing the last acgive menu
-                if ($lastActive) $lastActive.className = '';
-
-                // Marking active to the current one
-                $current.className = 'active-doc-menu';
-
-                // Fixing the position of the menu scroll
-                $MenuContainer.scrollTop = $current.offsetTop - 10;
-
-                // Setting the last active one to be remembered
-                $lastActive = $current;
-                // Setting the last Passed one void if necessary
-                lastPassed = current;
-            }
-        }
+        activeMenuOnScroll();
     }
     this.export(this.scope);
 </script>
