--- a/docs/components/tutorial/en/components.html
+++ b/docs/components/tutorial/en/components.html
@@ -2,7 +2,7 @@
 <inc src="page">
     <content>
         <!-- Including the section -->
-        <inc src="instance" data="{ noApp: true }"></inc>
+        <inc src="components" data="{ noApp: true }"></inc>
     </content>
 </inc>
 <script>
@@ -12,7 +12,7 @@
             name: 'Tutorial',
             type: 'expanded',
             resizable: 'y',
-            content: '<h2> Instance Eg! <\/h2>'
+            content: '<h2> Components Eg! <\/h2>'
         });
     }
 </script>
