--- a/docs/components/tutorial/en/structure/page.html
+++ b/docs/components/tutorial/en/structure/page.html
@@ -1,4 +1,5 @@
 <div class="main-view tutorial-page" e-def="{ sMenuClosed: false, chaptersClosed: true }">
+    <div class="is-in-development">This page is in development process, Please wait!</div>
     <aside class="tutorial-menu" e-class="{ 'side-menu-closed' : sMenuClosed }">
         <!-- Navegation -->
         <div class="top">
@@ -21,122 +22,133 @@
         <!-- Menu Navegation -->
         <div class="menu nice-scroll hide-it" e-class="{ 'hide-it' : chaptersClosed }">
             <ul>
-                <li> <a i:href="/tutorial"> <h3>Introduction</h3> </a> </li>
-                <li> <a i:href="/tutorial/instance">
+                <li> <a i:href="/tutorial">
+                        <h3>Introduction</h3>
+                    </a> </li>
+                <li sec="1"> <a i:href="/tutorial/instance">
                         <h3> Instance </h3>
                     </a>
                     <ul>
-                        <li> <a href="#inst_el"> Element </a> </li>
-                        <li> <a href="#inst_options"> Options </a> </li>
-                        <li> <a href="#properties"> <b>Properties</b> </a>
+                        <li> <a mark="#inst_el"> Element </a> </li>
+                        <li> <a mark="#inst_options"> Options </a> </li>
+                        <li> <a mark="#properties"> <b>Properties</b> </a>
                             <ul>
-                                <li> <a href="#prop_config"> Config Property </a> </li>
-                                <li> <a href="#prop_data"> Data Property </a> </li>
-                                <li> <a href="#prop_hooks"> Instance Hooks </a> </li>
+                                <li> <a mark="#prop_config"> Config Property </a> </li>
+                                <li> <a mark="#prop_data"> Data Property </a> </li>
+                                <li> <a mark="#prop_hooks"> Instance Hooks </a> </li>
                             </ul>
                         </li>
                     </ul>
                 </li>
-                <li> <a i:href="/tutorial/delimiters">
+                <li sec="1"> <a i:href="/tutorial/delimiters">
                         <h3> Delimiters </h3>
                     </a>
                     <ul>
-                        <li> <a href="#dlm_easy"> Easy </a> </li>
-                        <li> <a href="#dlm_common"> Common </a> </li>
+                        <li> <a mark="#dlm_easy"> Easy </a> </li>
+                        <li> <a mark="#dlm_common"> Common </a> </li>
                     </ul>
                 </li>
-                <li> <a i:href="/tutorial/bindings">
+                <li sec="1"> <a i:href="/tutorial/bindings">
                         <h3>Bindings</h3>
                     </a>
                     <ul>
-                        <li> <a href="#bind_one_way"> One Way </a> </li>
-                        <li> <a href="#bind_two_way"> Two Way </a> </li>
+                        <li> <a mark="#bind_one_way"> One Way </a> </li>
+                        <li> <a mark="#bind_two_way"> Two Way </a> </li>
                     </ul>
                 </li>
-                <li> <a i:href="/tutorial/commands">
+                <li sec="2"> <a i:href="/tutorial/commands">
                         <h3>Commands</h3>
                     </a>
                     <ul>
-                        <li> <a href="#cmd_data"> data </a> </li>
-                        <li> <a href="#cmd_wait_data"> wait-data </a> </li>
-                        <li> <a href="#cmd_e_content"> e-content </a> </li>
-                        <li> <a href="#cmd_e_skeleton"> e-skeleton </a> </li>
-                        <li> <a href="#cmd_e_def"> e-def </a> </li>
-                        <li> <a href="#cmd_e_if"> e-if </a> </li>
-                        <li> <a href="#cmd_e_show"> e-show </a> </li>
-                        <li> <a href="#cmd_e_for"> <b>e-for</b> </a>
+                        <li> <a mark="#cmd_data"> data </a> </li>
+                        <li> <a mark="#cmd_wait_data"> wait-data </a> </li>
+                        <li> <a mark="#cmd_e_content"> e-content </a> </li>
+                        <li> <a mark="#cmd_e_skeleton"> e-skeleton </a> </li>
+                        <li> <a mark="#cmd_e_def"> e-def </a> </li>
+                        <li> <a mark="#cmd_e_if"> e-if </a> </li>
+                        <li> <a mark="#cmd_e_show"> e-show </a> </li>
+                        <li> <a mark="#cmd_e_for"> <b>e-for</b> </a>
                             <ul>
-                                <li> <a href="#cmd_e_for_filter"> Filters </a> </li>
-                                <li> <a href="#cmd_e_for_filter_g_filter"> Global Filter </a> </li>
-                                <li> <a href="#cmd_e_for_filter_tg_filter"> Targeted Filter </a> </li>
-                                <li> <a href="#cmd_e_for_filter_d_filter"> Direct Filter </a> </li>
-                                <li> <a href="#cmd_e_for_filter_f_filter"> Function Filter </a> </li>
+                                <li> <a mark="#cmd_e_for_filter"> Filters </a> </li>
+                                <li> <a mark="#cmd_e_for_filter_g_filter"> Global Filter </a> </li>
+                                <li> <a mark="#cmd_e_for_filter_tg_filter"> Targeted Filter </a> </li>
+                                <li> <a mark="#cmd_e_for_filter_d_filter"> Direct Filter </a> </li>
+                                <li> <a mark="#cmd_e_for_filter_f_filter"> Function Filter </a> </li>
                             </ul>
                         </li>
-                        <li> <a href="#cmd_e_order"> e-order </a> </li>
-                        <li> <a href="#cmd_e_anm"> e-anm </a> </li>
-                        <li> <a href="#cmd_e_toggle"> e-toggle </a> </li>
-                        <li> <a href="#cmd_e"> e-[something] </a> </li>
+                        <li> <a mark="#cmd_e_order"> e-order </a> </li>
+                        <li> <a mark="#cmd_e_anm"> e-anm </a> </li>
+                        <li> <a mark="#cmd_e_toggle"> e-toggle </a> </li>
+                        <li> <a mark="#cmd_e"> e-[something] </a> </li>
                     </ul>
                 </li>
-                <li> <a i:href="/tutorial/events">
+                <li sec="2"> <a i:href="/tutorial/events">
                         <h3>Events</h3>
                     </a>
                     <ul>
-                        <li> <a href="#events_standard"> Standard </a> </li>
-                        <li> <a href="#events_easy"> Easy </a> </li>
-                        <li> <a href="#events_custom"> Custom </a> </li>
-                        <li> <a href="#events_modifiers"> Modifiers </a> </li>
+                        <li> <a mark="#events_standard"> Standard </a> </li>
+                        <li> <a mark="#events_easy"> Easy </a> </li>
+                        <li> <a mark="#events_custom"> Custom </a> </li>
+                        <li> <a mark="#events_modifiers"> Modifiers </a> </li>
                     </ul>
                 </li>
-                <li> <a i:href="/tutorial/methods" >
+                <li sec="3"> <a i:href="/tutorial/methods">
                         <h3> Methods </h3>
                     </a>
                     <ul>
-                        <li><a href="#method_setData"> setData </a></li>
-                        <li><a href="#method_on"> on </a></li>
-                        <li><a href="#method_off"> off </a></li>
-                        <li><a href="#method_emit"> emit </a></li>
-                        <li><a href="#method_expose"> expose </a></li>
-                        <li><a href="#method_retrieve"> retrieve </a></li>
-                        <li><a href="#method_tojsobj"> <b>toJsObj</b> </a>
-                            <ul>
-                                <li> <a href="#method_tojsobj_build"> e-build </a> </li>
-                                <li> <a href="#method_tojsobj_array"> e-array </a> </li>
-                            </ul>
-                        </li>
-                        <li><a href="#method_watch"> watch </a></li>
-                        <li><a href="#method_set"> set </a></li>
+                        <li><a mark="#method_setData"> setData </a></li>
+                        <li><a mark="#method_on"> on </a></li>
+                        <li><a mark="#method_off"> off </a></li>
+                        <li><a mark="#method_emit"> emit </a></li>
+                        <li><a mark="#method_expose"> expose </a></li>
+                        <li><a mark="#method_retrieve"> retrieve </a></li>
+                        <li><a mark="#method_tojsobj"> toJsObj </a></li>
+                        <li><a mark="#method_watch"> watch </a></li>
+                        <li><a mark="#method_set"> set </a></li>
                     </ul>
                 </li>
-                <li> <a i:href="/tutorial/components">
+                <li sec="4"> <a i:href="/tutorial/comps_incs">
                         <h3>Components / Includers</h3>
                     </a>
                     <ul>
-                        <li> <a href="#comp_cloned"> Cloned </a> </li>
-                        <li> <a href="#comp_registered"> Registered </a> </li>
-                        <li> <a href="#comp_registering"> Registering </a> </li>
-                        <li> <a href="#comp_handing"> Handling Components </a> </li>
-                        <li> <a href="#comp_format"> Component Format </a> </li>
-                        <li> <a href="#comp_style"> Styles </a> </li>
-                        <li> <a href="#comp_root"> Root Element </a> </li>
-                        <li> <a href="#comp_script"> Scripts </a> </li>
-                        <li> <a href="#comp_life_cycles"> <b>Lifecycles Hooks</b> </a>
+                        <li> <a mark="#comp_cloned"> Cloned </a> </li>
+                        <li> <a mark="#comp_registered"> Registered </a> </li>
+                        <li> <a mark="#comp_registering"> Registering </a> </li>
+                        <li> <a mark="#comp_handing"> Handling Components </a> </li>
+                        <li> <a mark="#comp_format"> Component Format </a> </li>
+                        <li> <a mark="#comp_style"> Styles </a> </li>
+                        <li> <a mark="#comp_root"> Root Element </a> </li>
+                        <li> <a mark="#comp_script"> Scripts </a> </li>
+                        <li> <a mark="#comp_life_cycles"> <b>Lifecycles Hooks</b> </a>
                             <ul>
-                                <li> <a href="#comp_life_cycles_created"> Created </a> </li>
-                                <li> <a href="#comp_life_cycles_mounted"> Mounted </a> </li>
-                                <li> <a href="#comp_life_cycles_loaded"> Loaded </a> </li>
-                                <li> <a href="#comp_life_cycles_destroyed"> Destroyed </a> </li>
+                                <li> <a mark="#comp_life_cycles_created"> Created </a> </li>
+                                <li> <a mark="#comp_life_cycles_mounted"> Mounted </a> </li>
+                                <li> <a mark="#comp_life_cycles_loaded"> Loaded </a> </li>
+                                <li> <a mark="#comp_life_cycles_destroyed"> Destroyed </a> </li>
                             </ul>
                         </li>
-                        <li> <a href="#comp_exporting"> Exporting </a> </li>
-                        <li> <a href="#comp_data"> Inc with data </a> </li>
-                        <li> <a href="#comp_delimiter"> Inc with Delimiter </a> </li>
-                        <li> <a href="#comp_keep_alive"> Keep Alive </a> </li>
-                        <li> <a href="#comp_nesting_content"> Nesting Content </a> </li>
-                        <li> <a href="#comp_nesting_includers"> Nesting Includers </a> </li>
+                        <li> <a mark="#comp_exporting"> Exporting </a> </li>
+                        <li> <a mark="#comp_data"> Inc with data </a> </li>
+                        <li> <a mark="#comp_delimiter"> Inc with Delimiter </a> </li>
+                        <li> <a mark="#comp_on"> Inc with `on` Method </a> </li>
+                        <li> <a mark="#comp_keep_alive"> Keep Alive </a> </li>
+                        <li> <a mark="#comp_nesting_content"> Nesting Content </a> </li>
+                        <li> <a mark="#comp_nesting_includers"> Nesting Includers </a> </li>
                     </ul>
                 </li>
+                <li sec="4"> <a i:href="/tutorial/routing">
+                        <h3>Routing </h3>
+                    </a>
+                    <ul>
+                        <li> <a mark="#routing_setting"> Setting </a> </li>
+                        <li> <a mark="#routing_navegation"> Navegation </a> </li>
+                        <li> <a mark="#routing_nesting"> Nesting Routes </a> </li>
+                        <li> <a mark="#routing_params"> Route Params </a> </li>
+                        <li> <a mark="#routing_pretty_url"> HTML5 Mode / Pretty URL </a> </li>
+                    </ul>
+                </li>
+            </ul>
+
             </ul>
         </div>
 
